[package]
name = "rust-coinselect-flutter"
version = "0.1.1"
edition = "2021"
description = "A blockchain-agnostic coin selection library built in Rust."
readme = "README.md"
documentation = "https://docs.rs/rust-coinselect"
keywords = ["UTXO", "coinselection", "subsetsum", "bitcoin", "blockchain"]
license = "MIT"
repository = "https://github.com/citadel-tech/rust-coinselect"

exclude = [".github"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
rand = "0.8.5"
flutter_rust_bridge = "=2.10.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = []

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "benches_srd"
harness = false

[[bench]]
name = "benches_bnb"
harness = false

[[bench]]
name = "benches_knapsack"
harness = false

[[bench]]
name = "benches_lowestlarger"
harness = false

[[bench]]
name = "benches_fifo"
harness = false

[[bench]]
name = "benches_leastchange"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
