[package]
name = "coinselect_flutter_ffi"
version = "0.1.0"
edition = "2021"
description = "A blockchain-agnostic coin selection wrapper around rust-coinselect"
readme = "README.md"
documentation = "https://docs.rs/rust-coinselect"
keywords = ["UTXO", "coinselection", "subsetsum", "bitcoin", "blockchain"]
license = "MIT"
repository = "https://github.com/Cyrix126/rust-coinselect"

exclude = [".github"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
rand = "0.8.5"
flutter_rust_bridge = { version = "=2.11.1", features = ["log"] }
log = "0.4"
simplelog = "0.12"
lazy_static = "1.4"
anyhow = "1"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
proptest = "1.7"
test-strategy = "0.4"

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = []

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "benches_srd"
harness = false

[[bench]]
name = "benches_bnb"
harness = false

[[bench]]
name = "benches_knapsack"
harness = false

[[bench]]
name = "benches_lowestlarger"
harness = false

[[bench]]
name = "benches_fifo"
harness = false

[[bench]]
name = "benches_leastchange"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.test]
opt-level = 3
